# hypera

./: .gitignore  .windsurfrules  BASIC_QDRANT_CON.py  README.md  mkdocs.yml  pyproject.toml  pytest.ini
docs/: CHANGELOG.md  DEVELOPMENT_PLAN.md  OBJECTIVE.md  TEST_COVERAGE.md  index.md
src/config/: __init__.py
src/core/: coordinator.py  metrics.py
src/hypera.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/llm/: gpt4_mini.py
src/metadata/: __init__.py  extractor.py  language_support.py  manager.py  metadata_manager.py  transformers.py  types.py
src/metadata/core/: __init__.py  metadata.py  types.py
src/metadata/language/: __init__.py  support.py
src/metadata/parsing/: __init__.py  extractors.py  parsers.py  types.py
src/metadata/parsing/grammars/: __init__.py  python.py
src/reasoning/: __init__.py  types.py
src/reasoning/agents/: __init__.py  base.py  behavioral.py  dependencies.py  metadata_agent.py  metrics.py  patterns.py  security.py  system.py
src/retrieval/: __init__.py  adaptive_retriever.py  cache.py  context.py  fallback.py  gemini.py  metrics.py  types.py
src/vector_store/: __init__.py  adaptive_pipeline.py  chunking.py  client.py  collections.py  embeddings.py  llm_metadata.py  pipeline.py  schema.py
tests/: conftest.py  test_reasoning.py
tests/core/: test_coordinator.py
tests/llm/: test_gpt4_mini.py
tests/metadata/: test_extraction_advanced.py  test_extraction_basic.py  test_language_support.py  test_metadata_generation.py  test_parser_core.py  test_parser_imports.py  test_parser_python.py
tests/reasoning/: test_system.py
tests/reasoning/agents/: test_metadata_agent.py
tests/retrieval/: test_context.py  test_gemini.py  test_metrics.py
tests/units/: test_metadata_manager.py
tests/vector_store/: test_embeddings.py
