[tool.poetry]
name = "hypera"
version = "0.1.0"
description = "Hyper-human codebase understanding system using Gemini 1.5 Pro and DeepSeek"
authors = ["HyperA Team"]
readme = "docs/OBJECTIVE.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
qdrant-client = "^1.7.0"
langchain-core = "^0.1.22"
python-dotenv = "^1.0.0"
pydantic = "^2.10.6"
google-generativeai = "^0.3.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.5"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
isort = "^5.13.2"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "strict"
